compiler/tools/fpp-check/test/redef/component_enum.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/component_enum.fpp: 3.1
enum C { X }
^
error: redefinition of symbol C
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/component_enum.fpp: 1.1
passive component C { }
^
